--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
             - v1-dependencies-
       - run: npm install
       - run: npm install ftp
+      - run: npm install glob
       - save_cache:
           paths:
             - node_modules
